Hotfix: updated explore page

--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -36,7 +36,7 @@ if('all' == strtolower($catTitle) OR (false === isset($catTitle))) {
     <section class="wrapper" id="products-wrapper">
 
         <aside class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
-             <?php  echo $this->render('explore/partials/filter_bak.phtml'); ?>
+             <?php  echo $this->render('explore/partials/filter.phtml'); ?>
         </aside>
         
         <section class="explore-products col-lg-8 col-md-9 col-sm-8 col-xs-12" id="explore-products">
