Hotfix: updated explore page

--- a/application/modules/default/views/scripts/explore/partials/filter.phtml
+++ b/application/modules/default/views/scripts/explore/partials/filter.phtml
@@ -96,7 +96,6 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
                     $rows = array($rows);
                 }
                 $helperBuildExploreUrl = new Default_View_Helper_BuildExploreUrl();
-                $helpTruncate = new Default_View_Helper_Truncate();
 
                 $csschild = "child";
                 if ($addAllItem) {
@@ -112,7 +111,7 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
                     $urlExplore = $helperBuildExploreUrl->buildExploreUrl($row['id'], null, $selectedOrder);
                     $product_count = empty($row['product_count']) ? '' : $row['product_count'];
 
-                    $result .= "<li class='navilink {$csschild}'><span class='title'><a class='{$csschild}' href='{$urlExplore}' data-id='{$row['id']}' title='{$row['title']}'>{$helpTruncate->truncate($row['title'],17)} <span style='float:right; padding-right:10px'>{$product_count}</span> </a></span>";
+                    $result .= "<li class='navilink {$csschild}'><span class='title'><a class='{$csschild}' href='{$urlExplore}' data-id='{$row['id']}' title='{$row['title']}'>{$row['title']} <span style='float:right; padding-right:10px'>{$product_count}</span> </a></span>";
 
                     if ($row['has_children']) {
                         $children = $row['children'];
