--- a/application/modules/default/views/scripts/explore/partials/filter.phtml
+++ b/application/modules/default/views/scripts/explore/partials/filter.phtml
@@ -80,6 +80,19 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
         background-color:  <?=$this->navBackgroundColorActive?>;
         color:  <?=$this->navColorActive?>;
     }
+    li.navilink span.cat-title {
+        display: inline-block;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 80%;
+        vertical-align: middle;
+    }
+    li.navilink span.product-counter {
+        display: inline-block;
+        padding-right: 10px;
+        vertical-align: middle;
+    }
     /*
     li.navilink.active.parent a.child{       
         color:  <?=$this->navBackgroundColorActive?>;
@@ -111,7 +124,7 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
                     $urlExplore = $helperBuildExploreUrl->buildExploreUrl($row['id'], null, $selectedOrder);
                     $product_count = empty($row['product_count']) ? '' : $row['product_count'];
 
-                    $result .= "<li class='navilink {$csschild}'><span class='title'><a class='{$csschild}' href='{$urlExplore}' data-id='{$row['id']}' title='{$row['title']}'>{$row['title']} <span style='float:right; padding-right:10px'>{$product_count}</span> </a></span>";
+                    $result .= "<li class='navilink {$csschild}'><span class='title'><a class='{$csschild}' href='{$urlExplore}' data-id='{$row['id']}' title='{$row['title']}'><span class='cat-title'>{$row['title']}</span> <span class='product-counter'>{$product_count}</span> </a></span>";
 
                     if ($row['has_children']) {
                         $children = $row['children'];
