--- a/application/modules/default/views/scripts/explore/partials/filter.phtml
+++ b/application/modules/default/views/scripts/explore/partials/filter.phtml
@@ -42,7 +42,7 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
     .navilink {
         color: #2673b0;
         margin: 0;
-        padding: 3px 0 0 15px;
+        padding: 3px 5px 0 5px;
     }
 
     .navilink span.title:hover {
@@ -85,13 +85,15 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        width: 80%;
+        width: 75%;
         vertical-align: middle;
     }
     li.navilink span.product-counter {
         display: inline-block;
         padding-right: 10px;
         vertical-align: middle;
+        text-align: end;
+        width: 20%;
     }
     /*
     li.navilink.active.parent a.child{       
