explore page: css updates

--- a/application/modules/default/views/scripts/explore/partials/filter.phtml
+++ b/application/modules/default/views/scripts/explore/partials/filter.phtml
@@ -87,10 +87,10 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
         text-overflow: ellipsis;
         width: 75%;
         vertical-align: middle;
+        padding-left: 3px;
     }
     li.navilink span.product-counter {
         display: inline-block;
-        padding-right: 10px;
         vertical-align: middle;
         text-align: end;
         width: 20%;
