--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -319,7 +319,7 @@
                                             + '</td>'
                                             + '<td style="text-align: right"><span id="download_counter_' + this.id + '">' + count_downloads + '</td>'
                                             + '<td>' + this.created_timestamp + '</td>'
-                                            + '<td style="text-align: right">' + humanFileSize(this.size,isExternLink) + '</td>'
+                                            + '<td style="text-align: right">' + humanFileSize(this.size,false) + '</td>'
                                         + '<td style="text-align: right; white-space:nowrap">' + installButton + '</td>'
                                             + '</tr>'
                                         );
