HOTFIX: filesize on external links

--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -376,10 +376,10 @@
 
                                         //fileSizeSum += parseInt(this.size);
 
-                                    if (!isExternLink)
-                                    {
+                                    //if (!isExternLink)
+                                    //{
                                        fileSizeSum += roundFileSizeInMB(parseInt(this.size));
-                                    }
+                                    //}
 
 
                                     if (this.type == 'audio/mpeg' || this.type == 'application/ogg') {
