--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -114,7 +114,7 @@ $categoryPath[] = $valueCatId;
                                 Hi <span class="lightblue"><?= $this->member->username; ?></span><?= $this->translate(', welcome to your personal start page!') ?>
                             </div>
                             <div class="small lightgrey">
-                                <a href="<?= $helpMemberUrl->buildExternalUrl($this->member->member_id); ?>">
+                                <a href="<?= $helpMemberUrl->buildMemberUrl($this->member->member_id); ?>">
                                     <?= $this->translate('Click here to go to your About Me page.') ?>
                                 </a>
                             </div>
