--- a/application/modules/default/views/scripts/product/partials/makerconfig.phtml
+++ b/application/modules/default/views/scripts/product/partials/makerconfig.phtml
@@ -296,7 +296,7 @@
             $new_supporter = new stdClass();
             $new_supporter->username = $supporter->username;
             $new_supporter->img = $supporter->profile_image_url;
-            $new_supporter->url = $helpMemberUrl->buildExternalUrl($supporter->member_id);
+            $new_supporter->url = $helpMemberUrl->buildMemberUrl($supporter->member_id);
             array_push($supportersArray, $new_supporter);
         }
     }
