--- a/application/modules/backend/views/scripts/claim/member.phtml
+++ b/application/modules/backend/views/scripts/claim/member.phtml
@@ -33,7 +33,7 @@ $helperImage = new Default_View_Helper_Image();
             <div class="row product-maker-sidebar">
                 <div class="col-md-5 col-lg-5 col-sm-5 col-xs-5 product-maker-thumbnail relative">
                     <a target="_blank"
-                       href="<?php echo $helperBuildMemberUrl->buildExternalUrl($this->member->member_id); ?>"
+                       href="<?php echo $helperBuildMemberUrl->buildMemberUrl($this->member->member_id); ?>"
                        title="<?= $this->member->username ?>">
                         <div class="profile-image-overlay-4 absolute"></div>
                         <img src="<?= $helperImage->Image($this->member->profile_image_url, array('width' => 100, 'height' => 100)); ?>" alt="member profile image" width="100"
@@ -42,7 +42,7 @@ $helperImage = new Default_View_Helper_Image();
                 </div>
                 <div class="col-md-7 col-lg-7 col-sm-7 col-xs-7 product-maker-summary">
                     <h4><a target="_blank"
-                           href="<?php echo $helperBuildMemberUrl->buildExternalUrl($this->member->member_id); ?>"><span
+                           href="<?php echo $helperBuildMemberUrl->buildMemberUrl($this->member->member_id); ?>"><span
                                 class="glyphicon glyphicon-link"></span> <?= $this->member->username; ?></a></h4>
 
                     <div
