--- a/application/modules/default/views/scripts/product/partials/sidebarSupporter.phtml
+++ b/application/modules/default/views/scripts/product/partials/sidebarSupporter.phtml
@@ -62,7 +62,7 @@ $countSupporter = count($this->supporter->toArray());
                 <!-- supporter item -->
                 <div class="col-md-3 col-lg-3 col-sm-3 col-xs-3 supporter-thumbnail relative">
                     <!-- supporter thumbnail -->
-                    <a href="<?= $helpMemberUrl->buildExternalUrl($supporter->member_id) ?>" title="<?= $supporter->username ?>">
+                    <a href="<?= $helpMemberUrl->buildMemberUrl($supporter->member_id) ?>" title="<?= $supporter->username ?>">
                         <div class="profile-image-overlay-3 absolute"></div>
                         <img src="<?= $helperImage->Image($supporter->profile_image_url,array('width' => 80, 'height' => 80, 'crop' => 2)); ?>" alt="<?= $supporter->username ?>" width="80">
                     </a>
@@ -73,7 +73,7 @@ $countSupporter = count($this->supporter->toArray());
 
                         <div class="inner">
                             <div class="profile-img">
-                                <a href="<?= $helpMemberUrl->buildExternalUrl($supporter->member_id) ?>"
+                                <a href="<?= $helpMemberUrl->buildMemberUrl($supporter->member_id) ?>"
                                    title="<?= $supporter->username ?>">
                                     <div class="profile-image-overlay-3 absolute"></div>
                                     <img src="<?= $helperImage->Image($supporter->profile_image_url,array('width' => 80, 'height' => 80, 'crop' => 2)); ?>"
