HOTFIX: show install button also on external links

--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -270,13 +270,13 @@
                                          );
                                      }
                                      else {*/
-                                     if (!link) {
+                                     //if (!link) {
                                          ocsUrl = generateOcsUrl(
                                              downloadUrl,
                                              $pploadCollection.attr('data-xdg-type'),
                                              this.name
                                          );
-                                     }
+                                     //}
 
                                      var installButton = '';
                                      if (this.active && ocsUrl) {
