bugfix: file list

--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -268,9 +268,7 @@
                                              decodeURIComponent(link),
                                              $pploadCollection.attr('data-xdg-type')
                                          );
-                                     }
-                                     else {
-                                     if (!link) {
+                                     } else if (!link) {
                                          ocsUrl = generateOcsUrl(
                                              downloadUrl,
                                              $pploadCollection.attr('data-xdg-type'),
