bugfix: file size sum

--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -372,11 +372,11 @@
                                             });
                                         }
 
-                                        //fileSizeSum += parseInt(this.size);
+                                        fileSizeSum += parseInt(this.size);
 
                                     //if (!isExternLink)
                                     //{
-                                       fileSizeSum += roundFileSizeInMB(parseInt(this.size));
+                                       //fileSizeSum += roundFileSizeInMB(parseInt(this.size));
                                     //}
 
 
@@ -528,12 +528,12 @@
 	                                        $("#data-link" + this.id).html($("#data-link" + this.id).html() + " (External Link)");
 	                                     }
 
-	                                     //fileSizeSum += parseInt(this.size);
+	                                     fileSizeSum += parseInt(this.size);
                                          //fileSizeSum += roundFileSizeInMB(parseInt(this.size));
 
                                          //if (!isExternLink)
                                          //{
-                                            fileSizeSum += roundFileSizeInMB(parseInt(this.size));
+                                            //fileSizeSum += roundFileSizeInMB(parseInt(this.size));
                                          //}
 
 
